--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
       "@supabase/realtime-js": "^2.10.4",
       "@supabase/supabase-js": "^2.45.0",
       "core-js": "^3.8.3",
+      "dompurify": "^3.1.6",
       "dotenv": "^16.4.5",
       "vue": "^3.2.13",
       "vue-router": "^4.0.13"
    },
    "devDependencies": {
       "@babel/core": "^7.12.16",
-      "@babel/eslint-parser": "^7.12.16",
+      "@babel/eslint-parser": "^7.25.1",
+      "@typescript-eslint/eslint-plugin": "^7.2.0",
+      "@typescript-eslint/parser": "^7.2.0",
       "@vue/cli-plugin-babel": "~5.0.0",
       "@vue/cli-plugin-eslint": "~5.0.0",
       "@vue/cli-service": "~5.0.0",
       "autoprefixer": "^10.4.19",
       "eslint": "^7.32.0",
-      "eslint-plugin-vue": "^8.0.3",
+      "eslint-plugin-vue": "^8.7.1",
       "events": "^3.3.0",
       "postcss": "^8.4.40",
       "tailwindcss": "^3.4.7"
