--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "dompurify": "^3.1.6",
       "dotenv": "^16.4.5",
       "vue": "^3.2.13",
-      "vue-router": "^4.0.13"
+      "vue-router": "^4.0.13",
+      "vuedraggable": "^4.1.0"
    },
    "devDependencies": {
       "@babel/core": "^7.12.16",
