--- a/package.json
+++ b/package.json
@@ -1,56 +1,64 @@
 {
-   "name": "blog-vues-js",
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
-      "serve": "vue-cli-service serve",
-      "build": "vue-cli-service build",
-      "lint": "vue-cli-service lint"
-   },
-   "dependencies": {
-      "@supabase/realtime-js": "^2.10.4",
-      "@supabase/supabase-js": "^2.45.0",
-      "bcryptjs": "^2.4.3",
-      "core-js": "^3.8.3",
-      "dompurify": "^3.1.6",
-      "dotenv": "^16.4.5",
-      "vue": "^3.2.13",
-      "vue-router": "^4.0.13",
-      "vuedraggable": "^4.1.0"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.12.16",
-      "@babel/eslint-parser": "^7.25.1",
-      "@typescript-eslint/eslint-plugin": "^7.2.0",
-      "@typescript-eslint/parser": "^7.2.0",
-      "@vue/cli-plugin-babel": "~5.0.0",
-      "@vue/cli-plugin-eslint": "~5.0.0",
-      "@vue/cli-service": "~5.0.0",
-      "autoprefixer": "^10.4.19",
-      "eslint": "^7.32.0",
-      "eslint-plugin-vue": "^8.7.1",
-      "events": "^3.3.0",
-      "postcss": "^8.4.40",
-      "tailwindcss": "^3.4.7"
-   },
-   "eslintConfig": {
-      "root": true,
-      "env": {
-         "node": true
-      },
-      "extends": [
-         "plugin:vue/vue3-essential",
-         "eslint:recommended"
-      ],
-      "parserOptions": {
-         "parser": "@babel/eslint-parser"
-      },
-      "rules": {}
-   },
-   "browserslist": [
-      "> 1%",
-      "last 2 versions",
-      "not dead",
-      "not ie 11"
-   ]
+  "name": "blog-vues-js",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@supabase/realtime-js": "^2.10.4",
+    "@supabase/supabase-js": "^2.45.0",
+    "bcryptjs": "^2.4.3",
+    "core-js": "^3.8.3",
+    "dompurify": "^3.1.6",
+    "dotenv": "^16.4.5",
+    "vue": "^3.2.13",
+    "vue-router": "^4.4.5",
+    "vuedraggable": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "^7.25.4",
+    "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "events": "^3.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "vue-jest": "^5.0.0-alpha.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
